@@ -83,7 +83,7 @@ reporting-org:last-of-type		{padding-bottom:40px;}
 
 /*	Description of project (shared with Transaction table)
 	============================================= */
-span.span_description description 					{font-size:1.0em; word-spacing:0.05em; line-height:1.45em; display:block; width:880px; padding:40px; padding-bottom:0; color:#FFF; white-space:pre; unicode-bidi:embed;}
+span.span_description description 					{font-size:1.0em; word-spacing:0.05em; line-height:1.5em; display:block; width:880px; padding:40px; padding-bottom:0; color:#FFF; white-space:pre-line; unicode-bidi:embed;}
 span.span_description description:nth-of-type(1):before{content:"DESCRIPTION"; font-size:14px; color:#ccc; display:block; margin-bottom:5px;}
 span.span_description description[type="1"]:before	{content:"GENERAL"; font-size:14px; color:#ccc; display:block; margin-bottom:5px;}
 span.span_description description[type="2"]:before	{content:"OBJECTIVES"; font-size:14px; color:#ccc; display:block; margin-bottom:5px;}
@@ -94,7 +94,7 @@ span.span_description description:last-of-type		{padding-bottom:40px;}
 /*	Result and description
 	============================================= */
 result					{display:block;}
-result description		{display:block; padding:20px 40px; line-height:1.5em; white-space:pre; unicode-bidi:embed;}
+result description		{display:block; padding:20px 40px; line-height:1.5em; white-space:pre-line; unicode-bidi:embed;}
 result description:nth-of-type(1):before	{content:"RESULT"; font-size:14px; color:#ccc; display:block; margin-bottom:5px;}
 
 
@@ -156,7 +156,7 @@ span.span_transaction transaction description {display:inline-block; vertical-al
 
 /*	Contact info for Publisher
 	============================================= */
-contact-info		{display:block; width:880px; padding:10px 40px; font-size:18px;}
+contact-info		{display:block; width:880px; padding:10px 40px; font-size:18px; line-height:1.5em;}
 contact-info *		{display:block; padding:5px 0; color:#FFF;}
 contact-info:nth-of-type(1):before	{content:"CONTACT INFO"; font-size:14px; color:#ccc; display:block; margin-bottom:10px;}
 contact-info:nth-of-type(1)			{padding-top:40px;}
