@@ -1,6 +1,7 @@
 Development Portal (2015-05-22 shi)
 ==============================
 Result description now visible in SAVi
+Added white-space to descriptions for better legibility in SAVi
 
 
 Development Portal (2015-04-23 shi)
